--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .homebg{
-    background-image: url('/jazzbg.jpg') !important;
+    background-image: url('https://i.imgur.com/qXp6iMb_d.webp?maxwidth=760&fidelity=grand') !important;
     background-position: center !important;
     background-attachment: fixed !important;
     background-repeat: no-repeat !important;
